--- a/Web/Web.config
+++ b/Web/Web.config
@@ -12,8 +12,8 @@
   -->
   <appSettings>
     <add  key="服务器2" value="server=47.52.155.70;user=root;password=Lyh07910;database=DLkfq_pos;Convert Zero Datetime=True;Allow Zero Datetime=True"/>
-    <add  key="服务器1" value="Provider=SQLOLEDB;server=bds28428944.my3w.com,1433;uid=bds28428944;pwd=Lyh079101;database=bds28428944_db"/>
-
+    <!--<add  key="服务器1" value="Provider=SQLOLEDB;server=bds28428944.my3w.com,1433;uid=bds28428944;pwd=Lyh079101;database=bds28428944_db"/>-->
+    <add  key="服务器1" value="server=47.52.155.70;user=root;password=Lyh07910;database=YH_jinxiaocun_PC;Convert Zero Datetime=True;Allow Zero Datetime=True"/>
   </appSettings>
 
   <system.web>
