--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -500,6 +500,18 @@
     <Content Include="Personnel\gongzimingxiUpd.aspx" />
     <Content Include="Personnel\gongzitiao.aspx" />
     <Content Include="Personnel\head.aspx" />
+    <Content Include="Personnel\images\baopan.png" />
+    <Content Include="Personnel\images\baoshui.png" />
+    <Content Include="Personnel\images\bumenhuizong.png" />
+    <Content Include="Personnel\images\gerensuodeshui.png" />
+    <Content Include="Personnel\images\gerenxinxi.png" />
+    <Content Include="Personnel\images\gongzimingxi.png" />
+    <Content Include="Personnel\images\gongzitiao.png" />
+    <Content Include="Personnel\images\kaoqinjilu.png" />
+    <Content Include="Personnel\images\renyuanxinxiguanli.png" />
+    <Content Include="Personnel\images\rili.png" />
+    <Content Include="Personnel\images\shebao.png" />
+    <Content Include="Personnel\images\shezhi.png" />
     <Content Include="Personnel\images\关闭.png" />
     <Content Include="Personnel\images\删除.png" />
     <Content Include="Personnel\images\放大.png" />
