--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -785,6 +785,9 @@
     <Compile Include="ji_chu_zi_liao_page.aspx.designer.cs">
       <DependentUpon>ji_chu_zi_liao_page.aspx</DependentUpon>
     </Compile>
+    <Compile Include="jxc_service\jxc_user.cs" />
+    <Compile Include="jxc_service\mingxi.cs" />
+    <Compile Include="jxc_service\ServicePage.cs" />
     <Compile Include="kh_ming_xi_selcet.aspx.cs">
       <DependentUpon>kh_ming_xi_selcet.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
