--- a/Web/Web.config
+++ b/Web/Web.config
@@ -69,11 +69,11 @@
     <add name="bds28428944_dbConnectionString" connectionString="Data Source=bds28428944.my3w.com;Initial Catalog=bds28428944_db;User ID=bds28428944;Password=07910Lyh" providerName="System.Data.SqlClient" />
     <add name="yaoConnectionString52" connectionString="Data Source=yhocn.cn;Initial Catalog=yao;User ID=sa;Password=Lyh07910_001" providerName="System.Data.SqlClient" />
     <add name="yaoConnectionString53" connectionString="Data Source=yhocn.cn;Initial Catalog=yao;User ID=sa;Password=Lyh07910_001" providerName="System.Data.SqlClient" />
-    <add name="FinanceEntities" connectionString="metadata=res://*/finance.model.Finance.csdl|res://*/finance.model.Finance.ssdl|res://*/finance.model.Finance.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=yhocn.cn;initial catalog=Finance;user id=sa;password=Lyh07910_001;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <add name="bds28428944_dbEntities" connectionString="metadata=res://*/finance.model.SoftTime.csdl|res://*/finance.model.SoftTime.ssdl|res://*/finance.model.SoftTime.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=bds28428944.my3w.com;initial catalog=bds28428944_db;user id=bds28428944;password=07910Lyh;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <add name="ServerEntities" connectionString="metadata=res://*/Server.Server.csdl|res://*/Server.Server.ssdl|res://*/Server.Server.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=yhocn.cn;user id=root;password=Lyh07910;database=YH_jinxiaocun_PC;Charset=utf8;Allow User Variables=True&quot;" providerName="System.Data.EntityClient" />
     <add name="yaoEntities" connectionString="metadata=res://*/Personnel.HrModel.HrServer.csdl|res://*/Personnel.HrModel.HrServer.ssdl|res://*/Personnel.HrModel.HrServer.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=yhocn.cn;initial catalog=yao;user id=sa;password=Lyh07910_001;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <add name="schedulingEntities" connectionString="metadata=res://*/scheduling.model.Scheduling.csdl|res://*/scheduling.model.Scheduling.ssdl|res://*/scheduling.model.Scheduling.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=yhocn.cn;initial catalog=scheduling;user id=sa;password=Lyh07910_001;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="FinanceEntities" connectionString="metadata=res://*/finance.model.Finance.csdl|res://*/finance.model.Finance.ssdl|res://*/finance.model.Finance.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=yhocn.cn;initial catalog=Finance;persist security info=True;user id=sa;password=Lyh07910_001;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="服务器_jxc" value="server=yhocn.cn;port=3306;user=root;password=Lyh07910;database=YH_jinxiaocun_PC;Convert Zero Datetime=True;Allow Zero Datetime=True;default command timeout=10;Connection Timeout=600" />
@@ -84,6 +84,9 @@
     <!--
 		使asmx文件可以被远程访问
 			-->
+    <httpModules>
+      <add name="DomainServiceModule" type="System.ServiceModel.DomainServices.Hosting.DomainServiceHttpModule, System.ServiceModel.DomainServices.Hosting, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
+    </httpModules>
     <webServices>
       <protocols>
         <add name="HttpPost" />
@@ -133,6 +136,9 @@
       <add name="ExtensionlessUrlHandler-ISAPI-4.0_64bit" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" modules="IsapiModule" scriptProcessor="%windir%\Microsoft.NET\Framework64\v4.0.30319\aspnet_isapi.dll" preCondition="classicMode,runtimeVersionv4.0,bitness64" responseBufferLimit="0" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
+    <modules runAllManagedModulesForAllRequests="true">
+      <add name="DomainServiceModule" preCondition="managedHandler" type="System.ServiceModel.DomainServices.Hosting.DomainServiceHttpModule, System.ServiceModel.DomainServices.Hosting, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
+    </modules>
   </system.webServer>
   <!--<sessionState
               mode="InProc"
@@ -147,4 +153,7 @@
       </parameters>
     </defaultConnectionFactory>
   </entityFramework>
+  <system.serviceModel>
+    <serviceHostingEnvironment aspNetCompatibilityEnabled="true" multipleSiteBindingsEnabled="true" />
+  </system.serviceModel>
 </configuration>
