--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -1286,6 +1286,8 @@
     <Content Include="Myadmin\HouTai\InsertUser.aspx" />
     <Content Include="Myadmin\HouTai\YongHuGuanli.aspx" />
     <Content Include="Myadmin\images\1221111.jpg" />
+    <Content Include="Myadmin\images\background2.jpg" />
+    <Content Include="Myadmin\images\background.jpg" />
     <Content Include="Myadmin\images\companyLogo.png" />
     <Content Include="Myadmin\images\gbg.jpg" />
     <Content Include="Myadmin\images\gs_logo.png" />
