--- a/SDZdb/SDZdb.csproj
+++ b/SDZdb/SDZdb.csproj
@@ -60,6 +60,9 @@
     <Compile Include="clsDatabaseinfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Properties\DataSources\rc_ku_info.datasource" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
